# SnakeCubeSolver

./: .gitignore  CMakeLists.txt  README.md
src/: Hull.h  Walker.h  main.cpp
